--- a/server/.env
+++ b/server/.env
@@ -1,3 +1,3 @@
 MONGO_URL=mongodb+srv://alchemy:alchemy@cluster0.hzkzc.mongodb.net/editorDB?retryWrites=true&w=majority,
 SECRET_KEY=7890-2345-67890-3456-9076,
-PORT=''
+PORT;
