--- a/server/package.json
+++ b/server/package.json
@@ -11,6 +11,7 @@
     "express-session": "^1.17.2",
     "http-errors": "^2.0.0",
     "jsonwebtoken": "^8.5.1",
+    "moment": "^2.29.1",
     "mongoose": "^6.1.4",
     "morgan": "^1.10.0",
     "node": "^16.0.0",
